...
                                        <rect key="frame" x="287" y="8" width="25" height="26"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="25" id="UcK-6v-WTC"/>
                                            <constraint firstAttribute="height" constant="30" id="xBQ-eK-vyM"/>
                                        </constraints>
                                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <state key="normal" backgroundImage="plus" catalog="system">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <segue destination="HAf-Dc-8yL" kind="presentation" id="fKe-x9-U0y"/>
                                        </connections>
                                    </button>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MUD-4D-O6e">
                                        <rect key="frame" x="242" y="4" width="61" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="r79-Ch-r3g"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="18"/>
                                        <state key="normal" title="See All">
                                            <color key="titleColor" red="0.60777515169999996" green="0.60788244010000003" blue="0.60776835679999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="omL-zY-JtS" kind="show" id="Yhl-v2-PBr"/>
                                        </connections>
                                    </button>
...
                                    <constraint firstAttribute="trailing" secondItem="MUD-4D-O6e" secondAttribute="trailing" constant="17" id="AyC-KD-LNc"/>
                                    <constraint firstAttribute="height" constant="42" id="CLw-Ci-3KB"/>
                                    <constraint firstItem="MUD-4D-O6e" firstAttribute="top" secondItem="do7-Lp-6gJ" secondAttribute="top" constant="4" id="NAc-HA-XDQ"/>
                                    <constraint firstItem="cIF-6K-EeF" firstAttribute="leading" secondItem="do7-Lp-6gJ" secondAttribute="leading" constant="8" id="YlS-8c-Yzg"/>
                                    <constraint firstItem="MUD-4D-O6e" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="cIF-6K-EeF" secondAttribute="trailing" constant="8" symbolic="YES" id="dhW-iv-YaD"/>
                                    <constraint firstAttribute="bottom" secondItem="MUD-4D-O6e" secondAttribute="bottom" constant="8" id="ulH-3m-28X"/>
                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="cIF-6K-EeF" secondAttribute="trailing" constant="20" symbolic="YES" id="wyY-rA-sCm"/>
                                    <constraint firstItem="cIF-6K-EeF" firstAttribute="top" secondItem="do7-Lp-6gJ" secondAttribute="top" constant="4" id="yaA-WF-9SB"/>
                                </constraints>
                            </view>
                            <collectionView autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bx2-j0-rm3">
                                <rect key="frame" x="0.0" y="86" width="320" height="254"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3a5-7u-ixS">
                                                <rect key="frame" x="0.0" y="0.0" width="320" height="252"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="252" id="5JF-o9-zmb"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                <state key="normal" backgroundImage="addimage">
                                                    <color key="titleColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                </state>
                                                <connections>
                                                    <action selector="AddPosterAction:" destination="HAf-Dc-8yL" eventType="touchUpInside" id="O5J-Zs-Liz"/>
                                                </connections>
                                            </button>
...
                                                <rect key="frame" x="85" y="774" width="150" height="40"/>
                                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="aZI-bN-rZU"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                                <state key="normal" title="Add">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <color key="titleShadowColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <integer key="value" value="11"/>
...
